--- a/index.html
+++ b/index.html
@@ -49,13 +49,29 @@
             </div>
 
             <div class="EmpowerImage">
-            <img src="./images/hero-section/card-1.png" alt="credit.card">
-            <img src="./images/hero-section/card-2.png" alt="happy man">
-            <img src="./images/hero-section/hero-image.png" alt="">
+            <img class=card1 src="./images/hero-section/card-1.png" alt="credit.card">
+            <img class=card2 src="./images/hero-section/card-2.png" alt="happy man">
+            <img class=heroimage src="./images/hero-section/hero-image.png" alt="">
             </div>
 
         </section>
-
+        <section class="empower-bottom">
+            <div class="brand-logo">
+                <img src="./images/logos/airbnb-logo.svg" alt="Airbnb">
+            </div>
+            <div class="brand-logo">
+                <img src="./images/logos/google-logo.svg" alt="Google">
+            </div>
+            <div class="brand-logo">
+                <img src="./images/logos/microsoft-logo.svg" alt="Microsoft">
+            </div>
+            <div class="brand-logo">
+                <img src="./images/logos/fedex-logo.svg" alt="FedEx">
+            </div>
+            <div class="amazon">
+                <img src="./images/logos/amazon-logo.svg" alt="Amazon">
+            </div>
+        </section>
 
     </main>
     <footer>
