--- a/project-page/projectPage.html
+++ b/project-page/projectPage.html
@@ -60,7 +60,7 @@
 
                 <div class="recentBoxes">
                    
-                    <img src="./images/5.jpg">
+                    <img class=vectorifyImage src="./images/5.jpg">
                     <h5>Purify</h5>
                     <p class="margin7" >UI/UX Design</p>
                     <a class="learnmore" style="text-decoration: none;" href="">Learn more</a> 
