--- a/contactUs/ContactUs.html
+++ b/contactUs/ContactUs.html
@@ -56,11 +56,13 @@
                     <label class="label" for="name">Message</label>
                     <textarea class="input-text" name="message" rows="10>">Write your message here...</textarea>
                 </div>
-                <button class="submit">Submit</button> 
+                <button class="button-contact" type="submit">Submit</button>
+
 
             
             </form>
-
+            <div class="error-message">           
+            </div>
         </div>
 
     </section>
@@ -97,6 +99,6 @@
 </footer>
 
 
-<sript src="index.js"></sript>
+<sript src="ContactUs.js"></sript>
 </body>
 </html>
