--- a/project-page/projectpage3.html
+++ b/project-page/projectpage3.html
@@ -22,7 +22,7 @@
             <a style="text-decoration: none;" href="../index.html">Home</a>
             <a style="text-decoration: none;" href="./projectPage.html">Projects</a>
             <a style="text-decoration: none;" href="../index.html">Services</a>
-            <!-- falta poner el scroll para luego ubicar este boton -->
+        
 
         </div>
         <button class="contactBtn" onclick="window.location.href='../contactUs/ContactUs.html'"> Contact Us </button> 
@@ -33,11 +33,11 @@
 
     <section class="simplifycontainer">
         <div class="simplifybox">
-            <h1>Simplify</h1>
+            <h3>Vectorify</h3>
                  <h4>UI Design & App Development</h4>   
                  <h5>Completed on June 22, 2021</h5>
 
-                <img src="./images/1.jpg">
+                <img src="./images/6.jpg">
                 <p>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi. Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt quix duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.<br> <br>
 
                     Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nis cillum minim tempor enim. </p>
